--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,23 @@
   }
   body {
     height: 120vh;
-    background: linear-gradient(to bottom, #f9544c 50%, #090c31 50%);
+    background: linear-gradient(to bottom, #f9544c 50%, #363636 50%);
   }
   .calculator {
     width: 400px;
-    background-color: #15173c;
+    background-color: #000000;
     padding: 50px 30px;
     position: relative;
     transform: translate(-50%, -50%);
-    top: 50%;
+    top: 40%;
     left: 50%;
     border-radius: 8px;
-    box-shadow: 0 20px 50px rgba(0, 5, 24, 0.4);
+    box-shadow: 10 20px 50px #4a4a4a87;
   }
   .display {
     width: 100%;
+    background-color: #d2d2d2;
+    border-radius: 10px;
   }
   .display input {
     width: 100%;
@@ -28,7 +30,7 @@
     text-align: right;
     border: none;
     background-color: transparent;
-    color: #ffffff;
+    color: #000000;
     font-size: 35px;
   }
   .display input::placeholder {
@@ -63,8 +65,8 @@
 
   .heading{
     width: 50%;
-    background-color: #ffffff;
-    padding: 50px 30px;
+    background-color: #000000;
+    padding: 50px 10px;
     position: relative;
     text-align: center;
         top: 5%;
@@ -72,3 +74,12 @@
     border-radius: 8px;
     box-shadow: 0 10px 10px rgba(51, 48, 48, 0.4);
   }
+  h1{
+    background-color: #ffffff;
+    box-shadow: 0 10px 10px rgba(97, 94, 94, 0.4);
+    border-radius:  0px 0px 8px 8px;
+    text-align: center;
+    padding: 10px;
+    margin: 0% 20% ;
+    text-decoration: none;
+    }
